add html structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h>Hello World</h>
+<! DOCTYPE html>
+<html>
+  <head>
+      <title>demo</title>
+  </head>
+  <body>
+    <h1>hello world</h1>
+    <p>this if for Orcars.</p>
+  </body>
+</html>
