--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<! DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
       <title>demo</title>
   </head>
   <body>
