--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1>hello world</h1>
     <p>this if for Orcars.</p>
+    <img src="images/breaching_whale.jpg" alt ="this is a whale" >
   </body>
 </html>
