add link to about page

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <body>
     <h1>About</h1>
     <p>
-      we are a taxi company based out of China and we serve <strong>customer's mobility needs</strong> using
+      we are a taxi company™ based out of China and we serve <strong>customer's mobility needs</strong> using
       <em>desktop and mobile applications</em>.....
     </p>
       </body>
