--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>hello world</h1>
+    <a href="about.html">about this project</a>
     <p>this if for Orcars.</p>
     <img src="images/breaching_whale.jpg" alt ="this is a whale" >
   </body>
