--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <body>
     <h1>hello world</h1>
     <a href="about.html">about this project</a>
-    <p>this if for Orcars.</p>
+    <p>this if for Orcars.
+        <a href ="http://orcars.co.uk"> orcars site</a>
+    </p>
     <img src="images/breaching_whale.jpg" alt ="this is a whale" >
   </body>
 </html>
